# Previous-Work

CMU_ImagingSoftware/.svn/: entries
CMU_ImagingSoftware/Stereo/: Stereo_main.m  depth_error.m
CMU_ImagingSoftware/StructuredLight/: Cam_Proj_calib.mat  Exp1_p1.mat  Exp1_p1.x3d  Exp1_p1_cleanup.x3d  ProCam_params_save.m  ProCam_params_save.m~  ProCam_params_save_old.m  ProCame_param.mat  ProCame_params.mat  SLI_bin_decode_dual_b.m  SLI_bin_decode_dual_b.m~  cleanupModel.m  closescreen.m  display_pattern.asv  outputModel_dir.m  processBracketing.asv  processBracketing.m  run_dual.m
CMU_ImagingSoftware/Tools/: AlignData.m  Voxel_examples.m  X3D2model.m  checkerSize.m  cleanupVoxels2.m  finite_icp.m  getVoxelValue.m  model2voxel.m  outputModel.m  outputVoxel.m  pca.m  processBracketing_SLpart2.m  processBracketing_SLpart2.m~  processHDR.m  processHDR_SV.m
Haptics/ARM_musings/: RoombaTest.m
Haptics/H3D/: maze.x3d
Haptics/H3D/HAPI_LineForceEffect/: CMakeLists.txt
Haptics/H3D/HAPI_LineForceEffect/HapticLineForceEffect/: HapticLineForceEffect.ncb  HapticLineForceEffect.sln
Haptics/Skill Transference/: PartialLSnotes.rtf  Statistical_Methods_for_Haptic_Skill_Transfere.ppt  extractData_fal.py
LegoNXT_Mapping_and_Remote_Operation/: Mapping_and_Remote_Operation.fig  Mapping_and_Remote_Operation.m  Readme.txt  Wii.m  nxtControl.php  update.php
LegoNXT_Mapping_and_Remote_Operation/Mapping/: Coordinates.m  avoidObstacles.m  detectObj.m  plotXY.m  pointFind.m
ROS_Kinect_anaglyph/: .generate_anaglyph.py.swp  CMakeLists.txt  b_generate_anaglyph.py  c_anaglyph.launch  generate_anaglyph.py  mainpage.dox  manifest.xml  np_generate_anaglyph.py  view_anaglyph.launch  view_np_anaglyph.launch
Solutions_In_Perception_Challenge/:  generate_all_models.py~  add_all_to_path.sh  add_all_to_path.sh~  del_extra_npy.py  del_extra_npy.py~  generate_all_models.py  generate_all_models.py~  generate_all_models.sh  generate_all_models.sh~  readme.txt  readme.txt~  test_all_models.py  test_all_models.py~  test_batch.py  test_batch.py~  test_batch.sh  test_batch.sh~
(+1279 files in other folders)
